fixing the position of the chat boxes.

--- a/client-io.css
+++ b/client-io.css
@@ -118,7 +118,7 @@ input[type=submit] {
   color: black;
 }
 #rooms {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
